# devns

./: .gitignore  CITATION.cff  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/: FUNDING.yml
.github/workflows/: ci.yaml  docker.yml  linux.yml  main.yml  release.yaml  release.yml  windows.yml
config/: zone.dev
config/safe/: zone.duckduckgo  zone.google
docker/: .dockerignore  Dockerfile  docker-compose.yaml
docker/config/safe/: zone.bing  zone.youtube
lib/: actions.rs  lib.rs  log.rs  server.rs  utils.rs  workers.rs
lib/enums/: byte_packet_error.rs  dns_record.rs  mod.rs  query_type.rs  result_code.rs
lib/records/: make.rs  mod.rs  write.rs
lib/structs/: byte_packet_buffer.rs  dns_header.rs  dns_packet.rs  dns_question.rs  lookup_record.rs  mod.rs  server_config.rs  worker_task.rs
scripts/: build.sh  docker.sh  run.sh
src/: main.rs
